manifests/local-business-prospector/service-omp-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-business-prospector-omp-worker
  namespace: local-business-prospector
  labels:
    app.kubernetes.io/name: local-business-prospector
    app.kubernetes.io/component: omp-worker
spec:
  type: ClusterIP
  ports:
    - port: 8788
      targetPort: 8788
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: local-business-prospector
    app.kubernetes.io/component: omp-worker
